# COMSOFTLAB

./: .dockerignore  .flake8  .isort  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: asgi.py  celery.py  routing.py  settings.py  urls.py
emails/: admin.py  api.py  consumers.py  models.py  serializers.py  tasks.py  urls.py  views.py
emails/api/: routers.py  views.py
emails/migrations/: 0001_initial.py
emails/templates/emails/: email_list.html
nginx/: Dockerfile  nginx.conf
static/: styles.css
transport/imap/: imap_client.py  utils.py
